--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.1.10",
+    "nodemailer": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
